# website-status

./: README.md  justfile  main.py  pyproject.toml  utils.py
.zed/: settings.json
